--- a/scss/_ability.scss
+++ b/scss/_ability.scss
@@ -1,5 +1,6 @@
 $margin-center: 0 auto;
-$font-Tks: "fot-tsukuardgothic-std", sans-serif;
+$font-Tks: "fot-tsukuardgothic-std",
+sans-serif;
 $color-W: #fdfdfd;
 $color-B: #4B4237;
 $color-EG: #A2C3AB;
@@ -23,11 +24,12 @@ $borderR-img: 5px;
 
         h1 {
             font-family: $font-Tks;
-            font-size: 3em;
+            font-size: 6rem;
         }
-    
+
         h2 {
             font-family: $font-Tks;
+            font-size: 3rem;
         }
     }
 }
@@ -51,27 +53,27 @@ $borderR-img: 5px;
             width: 100%;
             height: 100%;
             display: flex;
-        align-items: center;
-        justify-content: space-between;
-        position: absolute;
-    
+            align-items: center;
+            justify-content: space-between;
+            position: absolute;
+
             .ability-contents-text {
                 width: 50%;
                 height: 100%;
-    
+
                 h1 {
                     font-family: $font-Tks;
-                    font-size: 4em;
+                    font-size: 6rem;
                     color: $color-B;
                 }
-    
+
                 p {
                     font-family: $font-Tks;
-                    font-size: 1.2em;
+                    font-size: 2rem;
                     color: $color-B;
                 }
             }
-    
+
             img {
                 width: 40%;
                 height: auto;
@@ -97,7 +99,7 @@ $borderR-img: 5px;
             h2 {
                 font-family: $font-Tks;
                 color: $color-B;
-                font-size: 2em;
+                font-size: 3rem;
             }
         }
     }
@@ -105,7 +107,7 @@ $borderR-img: 5px;
 }
 
 #ability-contents::before {
-    content:"";
+    content: "";
     position: absolute;
     bottom: 0;
     right: 0;
@@ -153,7 +155,7 @@ $borderR-img: 5px;
                 a {
                     font-family: $font-Tks;
                     font-weight: bold;
-                    font-size: 2em;
+                    font-size: 4rem;
                     text-decoration: none;
                     color: $color-B;
                 }
@@ -171,7 +173,7 @@ $borderR-img: 5px;
                 a {
                     font-family: $font-Tks;
                     font-weight: bold;
-                    font-size: 2em;
+                    font-size: 4rem;
                     text-decoration: none;
                     color: $color-B;
                 }
@@ -194,7 +196,7 @@ $borderR-img: 5px;
                 a {
                     font-family: $font-Tks;
                     font-weight: bold;
-                    font-size: 2em;
+                    font-size: 4rem;
                     text-decoration: none;
                     color: $color-B;
                 }
@@ -219,10 +221,10 @@ $borderR-img: 5px;
     visibility: hidden;
 }
 
-@media screen and (max-width:600px){
+@media screen and (max-width:600px) {
     #ability-top {
         height: 30vh;
-    
+
         .ability-top-heading {
             width: 67%;
             height: 48%;
@@ -230,11 +232,11 @@ $borderR-img: 5px;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-    
+
             h1 {
                 font-size: 2em;
             }
-        
+
             h2 {
                 font-size: 0.8em;
             }
@@ -247,54 +249,54 @@ $borderR-img: 5px;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-    
+
         .ability-contents-0 {
             width: 68%;
             height: 50%;
-    
+
             .ability-contents-main {
                 width: 100%;
                 height: 100%;
                 display: flex;
                 flex-direction: column-reverse;
-            align-items: center;
-            justify-content: space-between;
-            position: absolute;
-        
+                align-items: center;
+                justify-content: space-between;
+                position: absolute;
+
                 .ability-contents-text {
                     width: 100%;
                     height: 36%;
                     text-align: center;
-        
+
                     h1 {
                         font-size: 2em;
                     }
-        
+
                     p {
                         font-size: 1em;
                     }
                 }
-        
+
                 img {
                     width: auto;
                     height: 64%;
                 }
             }
         }
-    
-    
+
+
         .ability-contents-btn {
             width: 60%;
             height: 24%;
             margin-bottom: 5%;
             justify-content: space-between;
             flex-wrap: wrap;
-    
+
             .ability-contents-btn-D {
                 width: 45%;
                 height: 44%;
                 background-color: $color-EG;
-    
+
                 h2 {
                     font-family: $font-Tks;
                     color: $color-B;
@@ -302,9 +304,9 @@ $borderR-img: 5px;
                 }
             }
         }
-    
+
     }
-    
+
     #ability-contents::before {
         border-width: 20px 100vw 0 0;
     }
@@ -312,26 +314,27 @@ $borderR-img: 5px;
     .parent-footer {
         width: 100vw;
         height: 64vh;
-    
+
         .parent-footer-1 {
             width: 100%;
             height: 90%;
             padding: 5% 0;
             justify-content: space-between;
-    
+
             img {
                 width: 30%;
                 height: auto;
             }
-    
+
             .footer-btn-1 {
                 width: 74%;
                 height: 60%;
                 display: flex;
                 align-items: center;
-                flex-direction: column;;
+                flex-direction: column;
+                ;
                 justify-content: space-around;
-    
+
                 .footer-btn-ability {
                     width: 100%;
                     height: 45%;
@@ -342,12 +345,12 @@ $borderR-img: 5px;
                     align-items: center;
                     justify-content: center;
                     flex-direction: column;
-    
+
                     .footer-ability-img {
                         width: 100%;
                         height: 50%;
                         position: relative;
-    
+
                         .footer-ability-img-1 {
                             width: 25%;
                             height: auto;
@@ -355,7 +358,7 @@ $borderR-img: 5px;
                             top: -60%;
                             left: 25%;
                         }
-    
+
                         .footer-ability-img-2 {
                             width: 30%;
                             height: auto;
@@ -364,16 +367,16 @@ $borderR-img: 5px;
                             right: 25%;
                         }
                     }
-    
+
                     a {
                         font-family: $font-Tks;
                         font-weight: bold;
-                        font-size: 1em;
+                        font-size: 1.5rem;
                         text-decoration: none;
                         color: $color-B;
                     }
                 }
-    
+
                 .footer-btn-goods {
                     width: 100%;
                     height: 45%;
@@ -383,41 +386,41 @@ $borderR-img: 5px;
                     align-items: center;
                     justify-content: center;
                     flex-direction: column;
-    
+
                     .footer-goods-img {
                         width: 100%;
                         height: 50%;
                         position: relative;
-    
+
                         .footer-goods-img-1 {
                             width: 40%;
                             top: -60%;
                             left: 30%;
                         }
-    
+
                         .footer-goods-img-2 {
                             width: 30%;
                             top: 5%;
                             left: 5%;
                         }
-    
+
                         .footer-goods-img-3 {
                             width: 30%;
                             top: 10%;
                             right: 3%;
                         }
                     }
-    
+
                     a {
-                        font-size: 1em;
+                        font-size: 1.5rem;
                     }
                 }
             }
-    
+
             .footer-btn-2 {
                 width: 74%;
                 height: 11%;
-    
+
                 .footer-btn-child {
                     width: 100%;
                     height: 100%;
@@ -426,14 +429,14 @@ $borderR-img: 5px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-    
+
                     a {
-                        font-size: 1em;
+                        font-size: 1.5rem;
                     }
                 }
             }
         }
-    
+
         .parent-footer-2 {
             width: 100vw;
             height: 10%;
