--- a/scss/_what.scss
+++ b/scss/_what.scss
@@ -20,7 +20,7 @@ $border-W2: 2px solid $color-W;
 
     h1 {
         font-family: $font-Tks;
-        font-size: 4em;
+        font-size: 7rem;
         color: $color-W;
         border-bottom: $border-W;
         margin-bottom: 5%;
@@ -55,7 +55,7 @@ $border-W2: 2px solid $color-W;
 
         h2 {
             font-family: $font-Tks;
-            font-size: 3.5em;
+            font-size: 6rem;
             color: $color-W;
             transform: rotate(6deg);
             position: absolute;
@@ -100,7 +100,7 @@ $border-W2: 2px solid $color-W;
 
     h2 {
         font-family: $font-Tks;
-        font-size: 7em;
+        font-size: 10rem;
         color: $color-W;
         transform: rotate(-5.5deg);
         position: absolute;
@@ -120,7 +120,7 @@ $border-W2: 2px solid $color-W;
 
     h3 {
         font-family: $font-Tks;
-        font-size: 3em;
+        font-size: 8rem;
         color: $color-W;
     }
 
@@ -139,7 +139,7 @@ $border-W2: 2px solid $color-W;
 
             h4 {
                 font-family: $font-Tks;
-                font-size: 3em;
+                font-size: 5rem;
                 color: $color-W;
                 transform: rotate(-10deg);
                 position: absolute;
@@ -155,7 +155,7 @@ $border-W2: 2px solid $color-W;
 
             h4 {
                 font-family: $font-Tks;
-                font-size: 3em;
+                font-size: 5rem;
                 color: $color-W;
                 transform: rotate(-10deg);
                 position: absolute;
@@ -182,7 +182,7 @@ $border-W2: 2px solid $color-W;
         flex-direction: column;
     
         h1 {
-            font-size: 1.5em;
+            font-size: 3rem;
             border-bottom: $border-W3;
             margin-bottom: 10%;
         }
@@ -213,7 +213,7 @@ $border-W2: 2px solid $color-W;
             }
     
             h2 {
-                font-size: 2.5em;
+                font-size: 3rem;
                 transform: rotate(6deg);
                 bottom: -5%;
                 left: 40%;
@@ -251,7 +251,7 @@ $border-W2: 2px solid $color-W;
         }
     
         h2 {
-            font-size: 3em;
+            font-size: 5rem;
             transform: rotate(-5.5deg);
             bottom: -3%;
             left: 0%;
@@ -267,7 +267,7 @@ $border-W2: 2px solid $color-W;
         justify-content: space-around;
     
         h3 {
-            font-size: 1.5em;
+            font-size: 3rem;
         }
     
         .why-more-content {
@@ -285,7 +285,7 @@ $border-W2: 2px solid $color-W;
                 text-align: center;
     
                 h4 {
-                    font-size: 2em;
+                    font-size: 2rem;
                     transform: rotate(-10deg);
                     top: -40%;
                     left: 5%;
@@ -298,7 +298,7 @@ $border-W2: 2px solid $color-W;
                 text-align: center;
     
                 h4 {
-                    font-size: 2em;
+                    font-size: 2rem;
                     transform: rotate(-10deg);
                     top: -40%;
                     left: 5%;
